Setup network with docker compose

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,11 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
     "AllowedHosts": "*",
+    "AllowedOrigins": "http://localhost:4200,http://spa:4200",
     "ConnectionStrings": {
         "DbName": "Database"
     }
